# Final_Proj206B

./: README.md
drone_workspace/devel/: .catkin  (+2 more)
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/: CMakeLists.txt  Makefile  docs.md
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/calibs/: 3prop_force_calib.csv  calibrate_forces_params.m
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/cfg/: motor_calib.cfg
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/gains/: ang_vel.gains  ang_vel.yaml  ang_vel2.yaml  attitude_gains.yaml  firmware_params.yaml  noise_params.yaml  position_gains.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/gains/blue_falcon.local/: position.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/gains/eppid_apr13/: ang_vel.yaml  position_pd.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/gains/px4/: position.yaml  velocity.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/gains/white_falcon.local/: position.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/: board.h  command_manager.h  data_structures.h  firmware_publisher.hpp  lie_algebra.h  log.hpp  mixer.h  mixer2.h  navio_board.h  navio_utils.h  param_server.h  parameters.h  qrotor_flight.h  sensors.h  state_machine.h  utils.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/control/: attitude_control_fsm.h  attitude_control_px4.h  attitude_controller.h  attitude_geometric_clf_qp.h  attitude_geometric_control.h  attitude_vbl_lqr.h  control_math.h  controllers.h  euler_angle_ppid.h  euler_pid.h  mueller_controller.h  position_clf_qp.h  position_controller.h  position_mpc.h  position_pid.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/estimation/: ahrs_default.h  attitude_estimator.h  estimators.h  madgwick_ahrs.h  mahony_rf.h  pose_estimator.h  pose_iekf.h  pose_naive.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/filters/: low_pass_filter.hpp  notch_filter.hpp
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/nodes/: firmware_interface.h  firmware_io.h  firmware_params_reconfig.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/peripherals/: external_pose_handler.hpp  natnet_handler.h  peripherals.h  rs_t265.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/planning/: flatness.hpp  mission_planner.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/include/trajectories/: base_trajectory.hpp  circular_trajectory.hpp  trajectories.h
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/launch/: falcon.launch  firmware_node.launch  pose_estimation.launch  tracking_camera.launch
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/msg/: AttitudeState.msg  Log.msg
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/params/: blue.yaml  falcon.yaml  red.yaml  white.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/rviz/: falcon.rviz  falcon_base.rviz  tracking_calib.rviz
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/scripts/: pi_push_ros.sh  pipull.sh  pipush.sh  realtime.sh
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/src/: command_manager.cpp  main.cpp  mixer.cpp  mixer2.cpp  navio_board.cpp  param_server.cpp  qrotor_flight.cpp  sensors.cpp  state_machine.cpp
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/src/control/: attitude_control_fsm.cpp  attitude_control_px4.cpp  attitude_controller.cpp  attitude_geometric_clf_qp.cpp  attitude_geometric_control.cpp  attitude_vbl_lqr.cpp  control_math.cpp  euler_angle_ppid.cpp  euler_pid.cpp  mueller_controller.cpp  position_clf_qp.cpp  position_controller.cpp  position_mpc.cpp  position_pid.cpp
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/src/estimation/: ahrs_default.cpp  attitude_estimator.cpp  madgwick_ahrs.cpp  mahony_rf.cpp  pose_estimator.cpp  pose_iekf.cpp  pose_naive.cpp
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/src/nodes/: firmware_interface.cpp  firmware_io.cpp  firmware_node.cpp  firmware_params_reconfig.cpp  motor_calibration_node.cpp  pose_estimation_node.cpp  tracking_camera_node.cpp
drone_workspace/src/qrotor_firmware-devel/qrotor_firmware/srv/: FlatTrajectory.srv
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/: CMakeLists.txt
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/cfg/: param_gazebo.cfg
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/gains/: position_gains.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/launch/: quadrotor_sil.launch  spawn_afh.launch  spawn_falcon.launch  spawn_multiple_falcons.launch  spawn_sdf.launch
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/params/: blue_falcon.yaml  dega_base.yaml  multiple_quad_payload.yaml  qrotor_payload.yaml  quad1.yaml  quad2.yaml  quad3.yaml  quad4.yaml  quadrotor.yaml  white_falcon.yaml
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/rviz/: multi_qrotor_payload.rviz  qrotor_payload.rviz
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/src/: model_example_plugin.cpp  multi_qrotor_fake_rc.cpp  multiquad_payload_plugin.cpp  multirotor_forces_moments.cpp  params_reconfig.cpp  qrotor_fake_rc.cpp  qrotor_sil.cpp  quadrotor_sil.cpp  rigidbody_plugin.cpp  sil_board.cpp  tracking_camera.cpp  udp_board.cpp
drone_workspace/src/qrotor_firmware-devel/qrotor_gazebo/xacro/: qrotor_gazebo.xacro
drone_workspace/src/qrotor_firmware-devel/qrotor_ground/: CMakeLists.txt  package.xml  requirements.txt
drone_workspace/src/qrotor_firmware-devel/qrotor_ground/cfg/: Catenary.cfg  DroneCommands.cfg  MultiDroneManager.cfg  Trajectories.cfg
drone_workspace/src/qrotor_firmware-devel/qrotor_ground/launch/: ground_station.launch
drone_workspace/src/qrotor_firmware-devel/qrotor_ground/scripts/: client.py  ground_station_node.py  multi_qrotor_manager.py  server.py
drone_workspace/src/qrotor_firmware-devel/qrotor_ground/src/: drone_manager.cpp  ground_station.cpp  qrotor_display.cpp
(+340 files in other folders)
